--- a/modulefiles/sloan/python/modules/3.6
+++ b/modulefiles/sloan/python/modules/3.6
@@ -3,7 +3,6 @@
 
 module-whatis "Adds PYTHONPATH to a number of pre-compiled python modules"
 
-module load engaging/python/3.6.0
-prereq engaging/python/3.6.0
+prereq python/3.6.3
 prepend-path PYTHONPATH /home/software/sloan/local/lib/py36
 
